# context-engineering-dashboard

./: .gitignore  README.md  basic_usage.ipynb  chroma_rag.ipynb  chroma_tracer.py  pyproject.toml  requirements.txt  trace-schema.json  trace.py
context_engineering_dashboard/: __init__.py
context_engineering_dashboard/core/: __init__.py  context_diff.py  context_window.py  resource.py  trace.py
context_engineering_dashboard/layouts/: horizontal.py  treemap.py  vertical.py
context_engineering_dashboard/styles/: colors.py
context_engineering_dashboard/tracers/: __init__.py  base_tracer.py  chroma_tracer.py  langchain_tracer.py  litellm_tracer.py  openai_tracer.py
docs/: deep_dive.ipynb  demo.ipynb  quick_start.ipynb
examples/: deep_dive.ipynb  quick_start.ipynb
mockups/: neo-brutalist-mockup.html
schemas/: trace-schema.json
specs/: CLAUDE_CODE_INSTRUCTIONS.md  SPECIFICATION.md
tests/: test_chroma_tracer.py  test_context_diff.py  test_context_window.py  test_interaction_modes.py  test_langchain_tracer.py  test_litellm_tracer.py  test_openai_tracer.py  test_resource.py  test_trace.py  test_trace_schema.py  test_treemap.py
